--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <h1>Angular Router Sample</h1>
+<nav>
+  <a class="button" routerLink="/crisis-list" routerLinkActive="activebutton"
+    >Crisis List</a
+  >
+  &nbsp;|&nbsp;
+  <a class="button" routerLink="/heroes-list" routerLinkActive="activebutton"
+    >Heroes</a
+  >
+</nav>
+
 <router-outlet></router-outlet>
